--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -15,19 +15,17 @@ a{
   color: black;
   text-align: center;
   position: relative;
-  margin: 10px 15px;
-  padding-bottom: 25px;
+  margin: 25px 15px;
+  padding: 20px 25px;
   width: 320px;
   border-radius: 4px;
-  box-shadow: 0px 0px 3px rgba(0,0,0,0.22);
   background-color: #fff;
-  overflow: hidden;  
-  transition: all 0.20s ease-in;
+  overflow: hidden;    
+  transition: all ease-in 0.25s;
   cursor: pointer;
 }
 
 .item-card_header{
-  background-color: rgb(233, 233, 233);
   font-size: large;
 }
 
@@ -46,9 +44,12 @@ a{
   object-fit: cover;
 }
 
-.item-card:hover{
-  box-shadow: 0px 4px 15px  rgba(0,0,0,0.1);
-  transform: translateY(-6px);
+.item-card:hover {
+  transform: translate(0px, -5px);
+  box-shadow: 5px 5px 9px 0px rgba(171, 171, 171, 0.3),
+    -3px -3px 18px 0px rgba(255, 255, 255, 0.95);
+
+  cursor: pointer;
 }
 
 .item-card_detail{
